# skim

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/skills/commit-discipline/: SKILL.md
.codex/skills/commit-discipline/agents/: openai.yaml
.codex/skills/tdd/: SKILL.md
.codex/skills/tdd/agents/: openai.yaml
.codex/skills/trajectory-review-ui/: SKILL.md
.codex/skills/trajectory-review-ui/agents/: openai.yaml
.github/: dependabot.yml
.github/workflows/: checks.yml
docs/: README.md  architecture.md  skim-web-ui-spec.md
src/skim/: __init__.py  app.py  cli.py  preview.py  review.py  scrolling.py  server.py  trajectory.py  web_preview.py
src/skim/core/: __init__.py  filesystem.py  previewing.py  review.py  trajectory_data.py
src/skim/tui/: __init__.py  app.py  preview.py  scrolling.py  trajectory.py
src/skim/web/: app.js  index.html  styles.css
src/skim/webui/: __init__.py  preview_serializer.py  server.py
src/skim/webui/static/: annotations.js  api.js  app.js  index.html  layout.js  main.js  palette.js  previews.js  state.js  tree.js  triage.js  workspace.js
tests/: conftest.py  test_app.py  test_app_shell.py  test_preview.py  test_refactor_contracts.py  test_review.py  test_server.py  test_trajectory_viewer.py  test_web_app_contract.py
