[project]
name = "skim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shizheng-rlfresh", email = "shi.zheng.tfls@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "textual[syntax]>=8.2.3",
]


[project.scripts]
skim = "skim:main"
skim-dev = "skim:dev"


[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
